2007-10-31  John W. Eaton  <jwe@octave.org>

	* graphics.cc (line::properties::get): Fix property name
	(markerface -> markerfacecolor).

	* Makefile.in (INCLUDES): Add debug.h to the list.

2007-10-30  John Swensen  <jpswensen@comcast.net>

	* debug.h: New file.
	* debug.cc (parse_dbfunction_params, do_find_bkpt_list,
	intmap_to_ov): New functions.
	(Fdbstop, Fdbclear): Use parse_dbfunction_params.
	Improve compatibility.
	(Fdbstatus): Improve compatibility.

	* help.cc (do_which): No longer static.
	* help.h: Provide decl.

2007-10-30  David Bateman  <dbateman@free.fr>

	* symtab.cc: Doc fixes for small book format.

2007-10-30  John W. Eaton  <jwe@octave.org>

	* file-io.cc (fopen_mode_to_ios_mode): Handle 'W' as 'w' and 'R'
	as 'r', but warn about them.

2007-10-29  Thomas Treichl <Thomas.Treichl@gmx.net>

	* data.cc: Include sytime.h, sys/types.h, and sys/resource.h.

2007-10-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (figure::properties::set_currentaxes): 
	Allow currentfigure to be NaN.

2007-10-25  Michael Goffioul <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/__contourc__.cc: Use unsigned int instead of uint.
	(drawcn): Use 1 << k instead of pow (2, k).

2007-10-25  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_record::TYPE): Delete trailing comma in enum decl.

	* ov-base.h (DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA): Use
	OCTAVE_EMPTY_CPP_ARG to avoid annoying Sun compiler warning.

	* Makefile.in (graphics.h): Use $(AWK) instead of awk.

	* DLD-FUNCTIONS/time.cc (Ftime, Fmktime): Avoid unnecessary cast.

	* data.cc (Ftic, Ftoc): Call double_value on octave_time objects
	instead of relying on conversion operator.
	* ov.cc (octave_value::octave_value (octave_time)): Likewise.

	* variables.cc (symbol_out_of_date): Use explicit conversion to
	time_t instead of relying on conversion operator.
	* ov-fcn-handle.cc (octave_fcn_handle::subsref): Likewise.

	* data.cc (tic_toc_timestamp): Rename from __tic_toc_timestamp__.
	Change all uses.
